extender codigoempleado de bitacora

--- a/src/main/resources/templates/fragments/descuento/descuentoform.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoform.html
@@ -103,7 +103,7 @@
                <div class="form-group">
                 <label class="col-sm-3 control-label">Monto descuento $(*):</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" num_decimal2  required="true" size="30" maxlength="30" th:field="*{montodescuento}"/>
+                    <input type="text" class="form-control num_decimal3 numeros"  required="true" size="30" maxlength="30" th:field="*{montodescuento}"/>
                 </div>
               <div class="popup"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('md')" onmouseout ="javascript:ocultarAyuda('md')">a</a></b>
