--- a/src/main/resources/templates/fragments/descuento/descuentoshow.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoshow.html
@@ -51,7 +51,8 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Monto descuento:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${descuento.montodescuento}">Numero de Acuerdo</p>
+                                <p class="form-control-static" th:text="${#numbers.formatDecimal(descuento.montodescuento, 0, 'COMMA', 2, 'POINT')}">Responsable Gasto</p>
+                                <!--<p class="form-control-static" th:text="${descuento.montodescuento}">Numero de Acuerdo</p>-->
                             </div>
                         </div>
 
@@ -67,7 +68,7 @@
                 </form> 
                 <div class="col-md-12">
                     <div class="row" align="center">
-                    <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>    
+                    <a href="#" th:href="@{/descuentos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>    
                     </div>
                 </div>
             </div>
