arreglando reporte dianostico de capacitacion

--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -43,9 +43,9 @@
                              <small class="form-text text-danger" th:if="${#fields.hasErrors('nombrecapacitador')}" th:errors="*{nombrecapacitador}"></small>
                         </div>
                              <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nombrecapacitador')" onmouseout ="javascript:ocultarAyuda('nombrecapacitador')">a</a></b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('ncapacitador')" onmouseout ="javascript:ocultarAyuda('ncapacitador')">a</a></b>
                         
-                        <span class="popuptext" id="nombrecapacitador">Ingrese el nombre del Capacitador.Solo se permiten 100 caracteres!</span>
+                        <span class="popuptext" id="ncapacitador">Ingrese el nombre del Capacitador.Solo se permiten 100 caracteres!</span>
                     </div>
                     </div>
                     <div class="form-group">
