--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -27,6 +27,12 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="col-sm-4 control-label">Dui:</label>
+                    <div class="col-sm-8">
+                        <p class="form-control-static" th:text="${usuario.dui}">Nombre</p>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="col-sm-4 control-label">Nombre y apellido:</label>
                     <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.nombrecompleto}">Nombre</p>
