--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -59,7 +59,7 @@
                <div class="popup"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechainicio')" onmouseout ="javascript:ocultarAyuda('fechainicio')">a</a></b>
                         
-                        <span class="popuptext" id="fechainicio">Seleccione la Fecha Desde, dando clic  en el control.!</span>
+                        <span class="popuptext" id="fechainicio">Seleccione la fecha de inicio.</span>
                     </div>
                  </div>
  
@@ -71,7 +71,7 @@
               <div class="popup"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechafin')" onmouseout ="javascript:ocultarAyuda('fechafin')">a</a></b>
                         
-                        <span class="popuptext" id="fechafin">Seleccine la fecha, dando un clic en el control!</span>
+                        <span class="popuptext" id="fechafin">Seleccine la fecha de finalizacion.</span>
                     </div>
                  </div>
             
