--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -330,7 +330,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<tr >
 															<th>Código dependiente</th>
 															<th>Nombre de  dependiente</th>
-															<th>parentesco</th>
+															<th>Parentesco</th>
 															<th></th>
 															<th></th>
 															<th></th>
